Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1482: Rework quickstart website (Jian Wang via ssc)

  MAHOUT-1491: Spectral KMeans Clustering doesn't clean its /tmp dir and fails when seeing it again (smarthi)

  MAHOUT-1488: DisplaySpectralKMeans fails: examples/output/clusteredPoints/part-m-00000 does not exist (Saleem Ansari via smarthi)

  MAHOUT-1476: Cleanup website on Hidden Markov Models

  MAHOUT-1475: Cleanup website on Naive Bayes (smarthi)

  MAHOUT-1472: Cleanup website on fuzzy kmeans (smarthi)

  MAHOUT-1471: Cleanup website for Canopy clustering (smarthi)

  MAHOUT-1467: ClusterClassifier readPolicy leaks file handles (Avi Shinnar, smarthi)

  MAHOUT-1466: Cluster visualization fails to execute (ssc)
  
  MAHOUT-1465: Clean up README (akm)

  MAHOUT-1463: Modify OnlineSummarizers to use the TDigest dependency from Maven Central (tdunning, smarthi)

  MAHOUT-1460: Remove reference to Dirichlet in ClusterIterator (frankscholten)

  MAHOUT-1459: Move Hadoop related code out of CanopyClusterer (frankscholten)

  MAHOUT-1458: Remove KMeansConfigKeys and FuzzyKMeansConfigKeys (frankscholten)

  MAHOUT-1457: Move EigenSeedGenerator into spectral kmeans package (frankscholten)

  MAHOUT-1455: Forkcount config causes JVM crashes during build (frankscholten)

  MAHOUT-1451: Cleaning up the examples for clustering on the website (Gaurav Misra via ssc)

  MAHOUT-1449: Update the Known Issues in Random Forests Page (Manoj Awasthi via ssc)

  MAHOUT-1448: In Random Forest, the training does not support multiple input files. The input dataset must be one single file. (Manoj Awasthi via ssc)

  MAHOUT-1447: ImplicitFeedbackAlternatingLeastSquaresSolver tests and features (Adam Ilardi via ssc)

  MAHOUT-1438: "quickstart" tutorial for building a simple recommender (Maciej Mazur and Steve Cook via ssc)

  MAHOUT-1434: Dead links on the web ste (Kevin Moulart, smarthi)

  MAHOUT-1433: Make SVDRecommender look at all unknown items of a user per default (ssc)
